fix spacings

--- a/src/index.css
+++ b/src/index.css
@@ -78,7 +78,7 @@ h6 {
   font-weight: 800;
   font-size:48px;
   line-height: 1.15;
-  margin-bottom: 10%;
+  margin-bottom: 5%;
 }
 
 /* === BUTTONS === */
